--- a/public/create/stylesets/non-editable.css
+++ b/public/create/stylesets/non-editable.css
@@ -252,17 +252,220 @@ p.toc-item + p.toc-item {
 
 /*CHARIS*/
 
+@font-face {
+	font-family:"Charis";
+	font-style:normal;
+	font-weight:400;
+	src : url("Fonts/charisregular.ttf");
+}
+
+@font-face {
+	font-family: "Charis";
+	font-style:italic;
+	font-weight:400;
+	src : url("Fonts/charisitalic.ttf");
+}
+
+@font-face {
+	font-family: "Charis";
+	font-style:normal;
+	font-weight:700;
+	src : url("Fonts/charisbold.ttf");
+}
+
+@font-face {
+	font-family: "Charis";
+	font-style:italic;
+	font-weight:700;
+	src : url("Fonts/charisbolditalic.ttf");
+}
+
 /*CHUNK*/
 
-/*CMU SANS SERIF*/
+@font-face {
+	font-family: "Chunk";
+	font-style:normal;
+	font-weight:700;
+	src : url("Fonts/chunk.otf");
+}
 
-/*CMU SERIF*/
+/*CMU BRIGHT*/
 
-/*CMU TYPEWRITER*/
+@font-face {
+	font-family:"CMU Bright";
+	font-style:normal;
+	font-weight:400;
+	src : url("Fonts/cmubrightroman.otf");
+}
+
+@font-face {
+	font-family: "CMU Bright";
+	font-style:italic;
+	font-weight:400;
+	src : url("Fonts/cmubrightoblique.otf");
+}
+
+@font-face {
+	font-family: "CMU Bright";
+	font-style:normal;
+	font-weight:600;
+	src : url("Fonts/cmubrightsemibold.otf");
+}
+
+@font-face {
+	font-family: "CMU Bright";
+	font-style:italic;
+	font-weight:600;
+	src : url("Fonts/cmubrightsemiboldoblique.otf");
+}
+
+@font-face {
+	font-family: "CMU Bright";
+	font-style:normal;
+	font-weight:700;
+	src : url("Fonts/cmubrightboldex.otf");
+}
+
+@font-face {
+	font-family: "CMU Bright";
+	font-style:italic;
+	font-weight:700;
+	src : url("Fonts/cmubrightboldexoblique.otf");
+}
 
 /*CMU CONCRETE*/
 
-/*CMU BRIGHT*/
+@font-face {
+	font-family:"CMU Concrete";
+	font-style:normal;
+	font-weight:400;
+	src : url("Fonts/cmuconcreteroman.otf");
+}
+
+@font-face {
+	font-family: "CMU Concrete";
+	font-style:italic;
+	font-weight:400;
+	src : url("Fonts/cmuconcreteitalic.otf");
+}
+
+@font-face {
+	font-family: "CMU Concrete";
+	font-style:normal;
+	font-weight:700;
+	src : url("Fonts/cmuconcreteboldex.otf");
+}
+
+@font-face {
+	font-family: "CMU Concrete";
+	font-style:italic;
+	font-weight:700;
+	src : url("Fonts/cmuconcreteboldexitalic.otf");
+}
+
+/*CMU SANS SERIF*/
+
+@font-face {
+	font-family:"CMU Sans Serif";
+	font-style:normal;
+	font-weight:400;
+	src : url("Fonts/cmusansserifroman.otf");
+}
+
+@font-face {
+	font-family: "CMU Sans Serif";
+	font-style:italic;
+	font-weight:400;
+	src : url("Fonts/cmusansserifoblique.otf");
+}
+
+@font-face {
+	font-family: "CMU Sans Serif";
+	font-style:normal;
+	font-weight:700;
+	src : url("Fonts/cmusansserifboldex.otf");
+}
+
+@font-face {
+	font-family: "CMU Sans Serif";
+	font-style:italic;
+	font-weight:700;
+	src : url("Fonts/cmusansserifboldexoblique.otf");
+}
+
+/*CMU SERIF*/
+
+@font-face {
+	font-family:"CMU Serif";
+	font-style:normal;
+	font-weight:400;
+	src : url("Fonts/cmuserifroman.otf");
+}
+
+@font-face {
+	font-family: "CMU Serif";
+	font-style:italic;
+	font-weight:400;
+	src : url("Fonts/cmuserifitalic.otf");
+}
+
+@font-face {
+	font-family: "CMU Serif";
+	font-style:normal;
+	font-weight:700;
+	src : url("Fonts/cmuserifboldex.otf");
+}
+
+@font-face {
+	font-family: "CMU Serif";
+	font-style:italic;
+	font-weight:700;
+	src : url("Fonts/cmuserifboldexitalic.otf");
+}
+
+/*CMU TYPEWRITER*/
+
+@font-face {
+	font-family:"CMU Typewriter";
+	font-style:normal;
+	font-weight:300;
+	src : url("Fonts/cmuttlight.otf");
+}
+
+@font-face {
+	font-family: "CMU Typewriter";
+	font-style:italic;
+	font-weight:300;
+	src : url("Fonts/cmuttlightoblique.otf");
+}
+
+@font-face {
+	font-family:"CMU Typewriter";
+	font-style:normal;
+	font-weight:400;
+	src : url("Fonts/cmuttregular.otf");
+}
+
+@font-face {
+	font-family: "CMU Typewriter";
+	font-style:italic;
+	font-weight:400;
+	src : url("Fonts/cmuttoblique.otf");
+}
+
+@font-face {
+	font-family: "CMU Typewriter";
+	font-style:normal;
+	font-weight:700;
+	src : url("Fonts/cmuttbold.otf");
+}
+
+@font-face {
+	font-family: "CMU Typewriter";
+	font-style:italic;
+	font-weight:700;
+	src : url("Fonts/cmuttbolditalic.otf");
+}
 
 /*COURIER PRIME*/
 
